LP-161 Implement wallet recreation flow (#86)
* LP-161 Implement wallet recreation flow
* LP-161 Add check for transaction existance